[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/ink/topicspot/obj_consoles_real.ink" type="Resource" id=1]
[ext_resource path="res://assets/scripts/environment/shiftable.gd" type="Script" id=2]
[ext_resource path="res://assets/scripts/environment/interactive.gd" type="Script" id=3]
[ext_resource path="res://assets/shaders/material_outline.tres" type="Material" id=4]
[ext_resource path="res://assets/sprites/objects/sheet_topicSpot_dream.png" type="Texture" id=5]
[ext_resource path="res://assets/ink/topicspot/obj_consoles_dream.ink" type="Resource" id=6]
[ext_resource path="res://assets/sprites/objects/sheet_topicSpot_real.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 18, 26.5 )

[node name="Consoles" type="RigidBody2D" groups=["shiftable"]]
mode = 1
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": ""
}
dreamsheet = ExtResource( 5 )
realsheet = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 4
material = ExtResource( 4 )
position = Vector2( 0, -25 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 21, 15, 50, 50 )

[node name="Hint" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.313726 )
show_behind_parent = true
light_mask = 4
texture = ExtResource( 7 )
offset = Vector2( 0, -25 )
region_enabled = true
region_rect = Rect2( 21, 15, 50, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -25 )
shape = SubResource( 23 )

[node name="ActiveArea" type="Area2D" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}
inkFileDream = ExtResource( 6 )
inkFileReal = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2( -6, -9.5 )
shape = SubResource( 22 )

[connection signal="body_entered" from="ActiveArea" to="ActiveArea" method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="ActiveArea" to="ActiveArea" method="_on_InteractArea_body_exited"]
[connection signal="can_interact" from="ActiveArea" to="." method="_on_ActiveArea_can_interact"]
[connection signal="cannot_interact" from="ActiveArea" to="." method="_on_ActiveArea_cannot_interact"]
